--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Hellow World</h1>
+        <h1>Coming Soon</h1>
         <p>I'm hosted with GitHub Pages.</p>
+        <button type="button" class="collapsible"> Online Learning</button>
+            <p>Coursera Projects</p>
     </body>
 </html>
