--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Coming Soon</h1>
-        <p>I'm hosted with GitHub Pages.</p>
-        <button type="button" class="collapsible"> Online Learning</button>
-            <p>Coursera Projects</p>
+        <h1>Curriculum Vitae Coming Soon</h1>
+        <h2>Experience</h2>
+        <h2>Training</h2>
+        <h2>Education</h2>
+        <h2>Learning Projects</h2>
+        <h2>Additional Learning</h2>
     </body>
 </html>
