--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         <h2>Experience</h2>
         <h2>Training</h2>
         <h2>Education</h2>
+            <h3>MSTC, Master of Science in Technical Communications</h3>
+                <h4>Capstone Project: Style and Structure Interactions of Accessible Digital Documents with Screen Reader and Braille Assistive Technologies</h4>
+            <h3>BA, Organizational Influence, Individualized Studies</h3>
+                <h4>Degree Focus: Business Legal Environment, UCC, Negotiation, Lobbying, Ethics, Management</h4>
+            <h3>AAS, Accoutning Technition</h3>
+                <h4>Areas of Study: GAAP, Finacial Accounting, Managerial Accounting, Payroll, Tax</h4>        
         <h2>Learning Projects</h2>
         <h2>Additional Learning</h2>
     </body>
