--- a/index.html
+++ b/index.html
@@ -6,11 +6,25 @@
         <h2>Training</h2>
         <h2>Education</h2>
             <h3>MSTC, Master of Science in Technical Communications</h3>
-                <h4>Capstone Project: Style and Structure Interactions of Accessible Digital Documents with Screen Reader and Braille Assistive Technologies</h4>
+                <h4>
+                    <ul>
+                        <li>Capstone Project: Style and Structure Interactions of Accessible Digital Documents with Screen Reader and Braille Assistive Technologies</li>
+                    </ul>
+                </h4>
             <h3>BA, Organizational Influence, Individualized Studies</h3>
-                <h4>Degree Focus: Business Legal Environment, UCC, Negotiation, Lobbying, Ethics, Management</h4>
+                <h4>
+                    <ul>
+                        <li>Degree Focus: Business Legal Environment, UCC, Negotiation, Lobbying, Ethics, Management</li>
+                        <li>summa cum laude</li>
+                    </ul>
+                </h4>
             <h3>AAS, Accoutning Technition</h3>
-                <h4>Areas of Study: GAAP, Finacial Accounting, Managerial Accounting, Payroll, Tax</h4>        
+                <h4>
+                    <ul>
+                        <li>Areas of Study: GAAP, Finacial Accounting, Managerial Accounting, Payroll, Tax</li>
+                        <li>Dean's list</li>
+                    </ul>
+                </h4>        
         <h2>Learning Projects</h2>
         <h2>Additional Learning</h2>
     </body>
